--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">BusinessLevelCryptoApp</string>
+    <string name="crypto_image">Crypto Image</string>
 </resources>
